# legalmind

./: .gitignore  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  FORMS_DOCUMENTATION_AR.md  PROJECT_SUMMARY_AR.md  QUICK_START.md  README-ANDROID.md  README.md  TECHNICAL_FORMS_GUIDE.md  capacitor.config.ts  index.html  legalmind_yemen.tsx  package-lock.json  package.json  supabase-schema.sql  tailwind.config.js  vercel.json  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle  proguard-rules.pro
public/: _headers  app-release.json
public/downloads/: README.md
scripts/: build-android.mjs  split-workspace-pages.mjs
src/: App.tsx  main.tsx  supabaseClient.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/migrations/: 001_local_schema.sql
src/app/: workspaceForms.ts
src/components/: AddCaseForm.tsx  AddClientForm.tsx  AlertBanner.tsx  CheckoutButton.tsx  EmployeePermissionsModal.tsx  FirmCodeCard.tsx  HeaderBar.tsx  InvitationLinkModal.tsx  MfaSettings.tsx  Modals.tsx  NotificationPanel.tsx  PaymentReminderModal.tsx  PermissionMatrix.tsx  ProfileAvatarUpload.tsx  QueryErrorBanner.tsx  ReceiptVoucherModal.tsx  SecurityEventsPanel.tsx  StatCard.tsx  SubscriptionFeatureList.tsx  SubscriptionUpgradeModal.tsx  SyncStatusBar.tsx  UsersList.tsx
src/constants/: appVersion.ts  planFeatures.ts  sampleData.ts  subscription.ts
src/lib/: api.ts  (+38 more)
supabase/: FIRM_CODES.md  FIRM_CODES_IMPLEMENTATION_REPORT.md  RLS_AUTH_FIX_REPORT.md  audit_schema.sql  complete_schema.sql
(+110 files in other folders)
