[package]
name = "legalmind-yemen"
version = "0.1.0"
description = "LegalMind Yemen offline-first desktop app"
authors = ["LegalMind Yemen"]
edition = "2021"

[lib]
name = "legalmind_yemen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
